Ensure editor upload progress bar is invisible when hidden

--- a/templates/admin/assets/css/shunt-editor.css
+++ b/templates/admin/assets/css/shunt-editor.css
@@ -141,11 +141,15 @@
 	left: 50%;
 	margin-left: -25%;
 	border-radius: 0 0 2px 2px;
-	transform: translateY(-100%);
-	transition: all 0.2s ease;
 	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
 }
+.editor-progress {
+	visibility: hidden;
+	transform: translateY(-100%);
+	transition: all 0.2s ease;
+}
 .editor-progress.active {
+	visibility: visible;
 	transform: translateY(0);
 }
 .editor-progress-cancel-button {
